source/potatoTheme.css
/*---------------------------------
         Background Display
---------------------------------*/

body {
    margin: 0;
    height: 100vh;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 3em;
    overflow-x: hidden;
}

.themePotato {
    color: #333;
    background-color: #73d918;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.potatoWork {
    background-image: url("img/background.png");
}

.potatoBreak {
    background-image: url("img/background-break.png");
}

.themeDark {
    color: white;
    background-color: #333333;
    background-image: none;
}

.themeLight {
    color: #333;
    background-color: white;
    background-image: none;
}

p {
    margin-bottom: 0px;
}

.hidden {
    display: none;
}

.showing {
    display: block;
}
/*---------------------------------
         Main Page Display
---------------------------------*/
.contentWrapper {
    position: absolute;
    left: 0%;
    top: 0%;
    right: 0%;
    bottom: auto;
    height: inherit;
    /* border-style: dashed;
    border-color: red; */
}


#title {
    display: block;
    margin-top: 40px;
    margin-bottom: 3px;
    text-shadow: 1px 1px 1px #000;
    font-family: sans-serif;
    font-size: 30px;
    float: center;
}

#phaseDisplay {
    display: inline-block;
    margin: 20px 0;
    text-shadow: 1px 1px 1px #000;
}

#settingsIcon {
    position: absolute;
    top: 10%;
    right: 35%;
    float : right;
}

@media screen and (max-width: 768px) {
    #settingsIcon {
        right: 5%
    }
}

#settingsIcon:hover {
    cursor: pointer;
}

#circleTimer {
    width: 200px;
    height: 200px;
    margin-right: auto;
    margin-left: auto;
    border-radius: 50%;
}

.circleLight {
    border: 10px solid black;
    background-color: white;
}

.circleDark {
    border: 10px solid white;
    background-color: #333;
}

.circlePotato {
    border: 5px solid #ff0;
    background-color: #ff0;
    box-shadow: 0 0 20px 20px #ff0;
}
#timerDisplay {
    margin: 40px auto;
    padding: 25px 0px;
    font-size: 50px;
    text-shadow: 1px 1px 1px #000;
    font-weight: bold;
}

.buttonWrapper {
    margin-top: 50px;
}

.buttonWrapper button {
    display: inline-block;
    width: 150px;
    height: 75px;
    margin: auto;
}

#taskAdder {
    margin-top: 20px;
    margin-bottom: 20px;
    font-size: 20px;
}

@media screen and (max-width: 479px) {
    .contentWrapper {
        margin: 0 0;
    }
    .buttonWrapper button {
        width: 100px;
        height: 50px;
    }
    .taskContainer {
        width: 100vw;
        text-align: left;
    }
    #enterTask {
        width: 60%;
    }
    #taskAdder {
        width: 100px;
        height: 50px;
    }
}

input[type="text"] {
    margin-top: 30px;
    height:30px;
    width: 300px;
}
/*---------------------------------
         Language DropDown
---------------------------------*/
.dropdown {
    position: relative;
    margin-left: -600px;
    display: inline-block;
  }
  
  .dropdown-content {
    display: none;
    position: relative;
    border-radius: 18px;
    background-color: #414b4d;
    z-index: 1;
  }
  
  .dropdown-content a {
    color: rgb(255, 255, 255);
    padding: 10px 10px;
    border-radius: 18px;
    font-size: 15px;
    text-decoration: none;
    display: block;
  }
  .dropdown-content a:hover {background-color: rgb(41, 41, 41);}
  .dropdown:hover .dropdown-content {display: block;}
  .dropdown .dropdown-content button {
      display: block;
  }

/*---------------------------------
         Settings Menu Display
---------------------------------*/
.menu {
    position: absolute;
    overflow: hidden;
    min-height: 200px;
    max-width: 768px;
    border: 5px solid #000;
    border-radius: 50px 50px 50px 50px;
    box-shadow: inset 0 -1px 10px 3px #6d6d6d;
    font-size: 38px;
    cursor: move;
}

.taskHelp {
    font-size: 17px;
    margin: 5px 0px;
    padding-left: 18px;
    padding-right: 15px;
}
.menuLight {
    background-color: white;
    background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
    background-image: linear-gradient(0deg, #eee, #fff);
}

 #settingsMenuHeader {
    padding: 10px;
    height: 50px;
    cursor: move;
}

.headerDark {
    background-color: rgb(85, 85, 85);
}

.headerLight {
    background-color: #333;
}

.menu p {
    margin-top: 20px;
    margin-bottom: 20px;
}

.close {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding-right: 20px;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
}

button {
    margin: 0 10px;
    padding: 10px 15px;
    border: 2px solid #000;
    border-radius: 50px;
    background-color: #333;
    /* background-color: #999; For dark mode */
    font-size: 24px;
    font-weight: bold;
    color: #fff;
    cursor: pointer;
}

.darkButton {
    background-color: #999;
}

button:hover {
    background-color: rgb(100, 100, 100);
}

.userInputContainer {
    margin: 20px 20px 20px 20px;
    padding-left: 25px;
    padding-right: 15px;
    padding-bottom: 20px;
    max-width: 350px;
    text-align: left;
}

.fieldLabel {
    font-size: 24px;
}

input {
    text-align: center;
    font-size: 20px;
}
.customTime {
    width: 60px;
}

#volume {
    display: inline-block;
    width: 75px;
}

#volumeIcon {
    display: inline-block;
    width: 40px;
    margin-right: 20px;
    cursor: pointer;
}

.userInputContainer div {
    display: block;
}

.userInputContainer input {
    border-radius: 20px;
    border-style: solid black;
    border-width: 5px;
}

.userInputContainer p {
    display: inline;
    margin: 0 -10px;
}

/* @media screen and (max-width: 768px) {
    menu {
        width: 100vw;
    }
} */
@media screen and (max-width: 479px) {
    .menu {
        top: 50%;
        width: 100%;
    }

    #prompt {
        width: 100%;
    }
    .userInputContainer input {
        font-size: 24px;
    }

    .userInputContainer p {
        margin: 0 -10px;
    }
}
/*---------------------------------
         Task Menu Display
---------------------------------*/
#deleteAll {
    position: absolute;
    left: 0%;
    top: 0%;
    right: auto;
    bottom: auto;
    padding-left: 20px;
    color: red;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
}

#taskListContainer {
    max-height: 400px;
    overflow-y: scroll;
    cursor: auto;
    margin: 15px;
}

.userTask {
    /* margin: 10px 20px; */
    border-style: solid;
    border-width: 2px;
    text-align: left;
    display: flexbox;
    padding-top: 3px;
    margin: auto;
}

.markCircle {
    margin-top:8px;
    margin-left: 10px;
    display: inline-block;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    cursor: pointer;
    /* background-color: black; */
}

.markLight {
    border: 5px solid black;
}

.markDark {
    border: 5px solid white;
}

.markFill {
    background-color: yellow;
}


.userTask img {
    display: inline-block;
    height: 30px;
    cursor: pointer;
    margin: 4px;
}

.userTask p {
    display: inline;
    font-size: 30px;
    word-wrap: break-word;
    margin: 12px;
    margin-top: -20px;
}

@media screen and (max-width: 768px) {
    #taskMenu p {
        font-size: 25px;
    }
}

#mainTasks {
    margin: 0 auto;
    max-width: 768px;
    max-height: 28vh;
    overflow-y: scroll;
}

#confirmMessage {
    margin: 20px 10px;
}

#prompt {
    position: absolute;
    top: 50%;
    left: 0%;
    right: 0%;
    margin-top: -150px;
    padding-top: 15px;
    padding-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    min-height: 150px;
    max-width: 768px;
    border: 5px solid #000;
    border-radius: 50px 50px 50px 50px;
    box-shadow: inset 0 -1px 10px 3px #6d6d6d;
    font-size: 28px;
}

/* additional spacing and alignment */
#chooseTheme{
    line-height: 0.5;
}

#chooseTheme button{
    font-size: 18px;
    margin: 0 0;
}

